0 - test fix
(cherry picked from commit 502ebdf8eaf08cd9a759484909ef60467c65178c)